examples/test/testpolicy1220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1220
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key27: value36
      key29: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value8
          key33: value22
      podSelector:
        matchLabels:
          key31: value12
          key43: value37
